[gd_scene load_steps=48 format=3]

[ext_resource type="Script" path="res://scripts/world/game_world.gd" id="1"]
[ext_resource type="Script" path="res://scripts/world/season_manager.gd" id="2"]
[ext_resource type="Script" path="res://scripts/world/encounter_manager.gd" id="3"]
[ext_resource type="Script" path="res://scripts/battle/battle_manager.gd" id="4"]
[ext_resource type="Script" path="res://scripts/crafting/crafting_system.gd" id="5"]
[ext_resource type="Script" path="res://scripts/world/farm_manager.gd" id="6"]
[ext_resource type="Script" path="res://scripts/world/tall_grass.gd" id="7"]
[ext_resource type="Script" path="res://scripts/world/farm_plot.gd" id="8"]
[ext_resource type="Script" path="res://scripts/world/trainer_npc.gd" id="9"]
[ext_resource type="PackedScene" path="res://scenes/ui/pvp_challenge_ui.tscn" id="10"]
[ext_resource type="PackedScene" path="res://scenes/ui/trainer_dialogue_ui.tscn" id="11"]
[ext_resource type="Script" path="res://scripts/world/crafting_station.gd" id="12"]
[ext_resource type="Script" path="res://scripts/world/storage_station.gd" id="14"]
[ext_resource type="Script" path="res://scripts/world/recipe_pickup.gd" id="13"]
[ext_resource type="Script" path="res://scripts/world/world_item_manager.gd" id="15"]
[ext_resource type="Script" path="res://scripts/world/restaurant_manager.gd" id="16"]
[ext_resource type="Script" path="res://scripts/world/shop_npc.gd" id="17"]
[ext_resource type="Script" path="res://scripts/world/social_npc.gd" id="18"]
[ext_resource type="Script" path="res://scripts/world/social_manager.gd" id="19"]
[ext_resource type="Script" path="res://scripts/world/location_manager.gd" id="20"]
[ext_resource type="Script" path="res://scripts/world/quest_manager.gd" id="21"]
[ext_resource type="Script" path="res://scripts/world/friend_manager.gd" id="22"]

[sub_resource type="BoxShape3D" id="ground_shape"]
size = Vector3(200, 0.2, 200)

[sub_resource type="BoxMesh" id="ground_mesh"]
size = Vector3(200, 0.2, 200)

[sub_resource type="StandardMaterial3D" id="ground_mat"]
albedo_color = Color(0.3, 0.55, 0.25, 1)

[sub_resource type="BoxMesh" id="building_mesh"]
size = Vector3(6, 4, 6)

[sub_resource type="StandardMaterial3D" id="building_mat"]
albedo_color = Color(0.6, 0.6, 0.65, 1)

[sub_resource type="BoxShape3D" id="building_shape"]
size = Vector3(6, 4, 6)

[sub_resource type="BoxMesh" id="table_mesh"]
size = Vector3(2, 1, 1)

[sub_resource type="StandardMaterial3D" id="table_mat"]
albedo_color = Color(0.5, 0.3, 0.15, 1)

[sub_resource type="BoxShape3D" id="table_interact_shape"]
size = Vector3(3, 2, 2)

[sub_resource type="BoxMesh" id="fence_mesh"]
size = Vector3(0.2, 1.5, 14)

[sub_resource type="StandardMaterial3D" id="fence_mat"]
albedo_color = Color(0.45, 0.3, 0.15, 1)

[sub_resource type="BoxMesh" id="water_mesh"]
size = Vector3(2, 0.8, 2)

[sub_resource type="StandardMaterial3D" id="water_mat"]
albedo_color = Color(0.2, 0.4, 0.9, 1)

[sub_resource type="BoxShape3D" id="water_interact_shape"]
size = Vector3(3, 2, 3)

[sub_resource type="BoxMesh" id="path_mesh"]
size = Vector3(3, 0.05, 3)

[sub_resource type="StandardMaterial3D" id="path_mat"]
albedo_color = Color(0.5, 0.4, 0.25, 1)

[sub_resource type="BoxMesh" id="grass_blade_mesh"]
size = Vector3(0.3, 1.2, 0.3)

[sub_resource type="StandardMaterial3D" id="grass_green_mat"]
albedo_color = Color(0.2, 0.6, 0.2, 0.7)
transparency = 1

[sub_resource type="StandardMaterial3D" id="grass_red_mat"]
albedo_color = Color(0.6, 0.3, 0.2, 0.7)
transparency = 1

[sub_resource type="StandardMaterial3D" id="grass_gold_mat"]
albedo_color = Color(0.6, 0.55, 0.2, 0.7)
transparency = 1

[sub_resource type="StandardMaterial3D" id="grass_blue_mat"]
albedo_color = Color(0.3, 0.4, 0.7, 0.7)
transparency = 1

[sub_resource type="StandardMaterial3D" id="grass_yellow_mat"]
albedo_color = Color(0.7, 0.8, 0.2, 0.7)
transparency = 1

[sub_resource type="StandardMaterial3D" id="grass_purple_mat"]
albedo_color = Color(0.6, 0.3, 0.6, 0.7)
transparency = 1

[sub_resource type="BoxMesh" id="storage_mesh"]
size = Vector3(1.5, 1.8, 1.0)

[sub_resource type="StandardMaterial3D" id="storage_mat"]
albedo_color = Color(0.55, 0.55, 0.6, 1)

[sub_resource type="BoxShape3D" id="storage_interact_shape"]
size = Vector3(3, 2, 2.5)

[sub_resource type="BoxMesh" id="workbench_mesh"]
size = Vector3(2, 1.2, 1.2)

[sub_resource type="StandardMaterial3D" id="workbench_mat"]
albedo_color = Color(0.35, 0.22, 0.1, 1)

[sub_resource type="BoxShape3D" id="station_interact_shape"]
size = Vector3(3.5, 2, 2.5)

[sub_resource type="BoxMesh" id="cauldron_mesh"]
size = Vector3(1.5, 1.2, 1.5)

[sub_resource type="StandardMaterial3D" id="cauldron_mat"]
albedo_color = Color(0.25, 0.15, 0.3, 1)

[sub_resource type="SphereShape3D" id="pickup_shape"]
radius = 2.0

[sub_resource type="BoxShape3D" id="grass_area_shape"]
size = Vector3(8, 2, 8)

[node name="GameWorld" type="Node3D"]
script = ExtResource("1")

[node name="SeasonManager" type="Node" parent="."]
script = ExtResource("2")

[node name="EncounterManager" type="Node" parent="."]
script = ExtResource("3")

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("4")

[node name="CraftingSystem" type="Node" parent="."]
script = ExtResource("5")

[node name="Environment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.866, -0.354, 0.354, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 0, 15, 10)
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)

[node name="GroundMesh" type="MeshInstance3D" parent="Environment/Ground"]
mesh = SubResource("ground_mesh")
material_override = SubResource("ground_mat")

[node name="GroundCollision" type="CollisionShape3D" parent="Environment/Ground"]
shape = SubResource("ground_shape")

[node name="Players" type="Node3D" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="Players"]
_spawnable_scenes = PackedStringArray("res://scenes/player/player.tscn")
spawn_path = NodePath("..")

[node name="Zones" type="Node3D" parent="."]

; === RESTAURANT ZONE (hub area around spawn) ===
[node name="RestaurantZone" type="Node3D" parent="Zones"]

[node name="Building" type="StaticBody3D" parent="Zones/RestaurantZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -2)

[node name="BuildingMesh" type="MeshInstance3D" parent="Zones/RestaurantZone/Building"]
mesh = SubResource("building_mesh")
material_override = SubResource("building_mat")

[node name="BuildingCollision" type="CollisionShape3D" parent="Zones/RestaurantZone/Building"]
shape = SubResource("building_shape")

[node name="CraftingTable" type="StaticBody3D" parent="Zones/RestaurantZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.5, 1)

[node name="TableMesh" type="MeshInstance3D" parent="Zones/RestaurantZone/CraftingTable"]
mesh = SubResource("table_mesh")
material_override = SubResource("table_mat")

[node name="InteractArea" type="Area3D" parent="Zones/RestaurantZone/CraftingTable"]
script = ExtResource("12")
station_type = "kitchen"

[node name="InteractShape" type="CollisionShape3D" parent="Zones/RestaurantZone/CraftingTable/InteractArea"]
shape = SubResource("table_interact_shape")

[node name="StationLabel" type="Label3D" parent="Zones/RestaurantZone/CraftingTable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
text = "Kitchen"
font_size = 48
outline_size = 8
modulate = Color(1, 0.8, 0.3, 1)

; === PANTRY (creature storage station) ===
[node name="Pantry" type="StaticBody3D" parent="Zones/RestaurantZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.9, -1)

[node name="PantryMesh" type="MeshInstance3D" parent="Zones/RestaurantZone/Pantry"]
mesh = SubResource("storage_mesh")
material_override = SubResource("storage_mat")

[node name="InteractArea" type="Area3D" parent="Zones/RestaurantZone/Pantry"]
script = ExtResource("14")

[node name="InteractShape" type="CollisionShape3D" parent="Zones/RestaurantZone/Pantry/InteractArea"]
shape = SubResource("storage_interact_shape")

[node name="StationLabel" type="Label3D" parent="Zones/RestaurantZone/Pantry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
text = "Pantry"
font_size = 48
outline_size = 8
modulate = Color(0.5, 0.7, 0.9, 1)

[node name="SpawnPoint" type="Marker3D" parent="Zones/RestaurantZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

; === FARM ZONE (25, 0, 0) — east of hub ===
[node name="FarmZone" type="Node3D" parent="Zones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0)

[node name="FarmManager" type="Node3D" parent="Zones/FarmZone"]
script = ExtResource("6")

[node name="FenceLeft" type="MeshInstance3D" parent="Zones/FarmZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0.75, 0)
mesh = SubResource("fence_mesh")
material_override = SubResource("fence_mat")

[node name="FenceRight" type="MeshInstance3D" parent="Zones/FarmZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0.75, 0)
mesh = SubResource("fence_mesh")
material_override = SubResource("fence_mat")

[node name="FenceFront" type="MeshInstance3D" parent="Zones/FarmZone"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, 0.75, 7)
mesh = SubResource("fence_mesh")
material_override = SubResource("fence_mat")

[node name="FenceBack" type="MeshInstance3D" parent="Zones/FarmZone"]
transform = Transform3D(0, 0, 1, 0, 1, 0, -1, 0, 0, 0, 0.75, -7)
mesh = SubResource("fence_mesh")
material_override = SubResource("fence_mat")

[node name="WaterSource" type="StaticBody3D" parent="Zones/FarmZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0.4, 6)

[node name="WaterMesh" type="MeshInstance3D" parent="Zones/FarmZone/WaterSource"]
mesh = SubResource("water_mesh")
material_override = SubResource("water_mat")

[node name="WaterArea" type="Area3D" parent="Zones/FarmZone/WaterSource" groups=["water_source"]]

[node name="WaterShape" type="CollisionShape3D" parent="Zones/FarmZone/WaterSource/WaterArea"]
shape = SubResource("water_interact_shape")

; === WORKBENCH (near spawn) ===
[node name="Workbench" type="StaticBody3D" parent="Zones/RestaurantZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0.6, 5)

[node name="WorkbenchMesh" type="MeshInstance3D" parent="Zones/RestaurantZone/Workbench"]
mesh = SubResource("workbench_mesh")
material_override = SubResource("workbench_mat")

[node name="InteractArea" type="Area3D" parent="Zones/RestaurantZone/Workbench"]
script = ExtResource("12")
station_type = "workbench"

[node name="InteractShape" type="CollisionShape3D" parent="Zones/RestaurantZone/Workbench/InteractArea"]
shape = SubResource("station_interact_shape")

[node name="StationLabel" type="Label3D" parent="Zones/RestaurantZone/Workbench"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
text = "Workbench"
font_size = 48
outline_size = 8
modulate = Color(0.8, 0.5, 0.2, 1)

; === WILD ZONE (at origin — all encounter zones use absolute positions) ===
[node name="WildZone" type="Node3D" parent="Zones"]

; Herb Garden (-12, 0, -15) — easy, west branch
[node name="HerbGarden" type="Area3D" parent="Zones/WildZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -15)
script = ExtResource("7")
encounter_table_id = "herb_garden"
grass_color = Color(0.2, 0.6, 0.2, 0.7)

[node name="GrassShape" type="CollisionShape3D" parent="Zones/WildZone/HerbGarden"]
shape = SubResource("grass_area_shape")

[node name="Grass1" type="MeshInstance3D" parent="Zones/WildZone/HerbGarden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.6, -1)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_green_mat")

[node name="Grass2" type="MeshInstance3D" parent="Zones/WildZone/HerbGarden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 1)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_green_mat")

[node name="Grass3" type="MeshInstance3D" parent="Zones/WildZone/HerbGarden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, -2)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_green_mat")

[node name="Grass4" type="MeshInstance3D" parent="Zones/WildZone/HerbGarden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.65, 2)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_green_mat")

[node name="Grass5" type="MeshInstance3D" parent="Zones/WildZone/HerbGarden"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.55, 0)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_green_mat")

; Flame Kitchen (12, 0, -15) — easy, east branch
[node name="FlameKitchen" type="Area3D" parent="Zones/WildZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -15)
script = ExtResource("7")
encounter_table_id = "flame_kitchen"
grass_color = Color(0.6, 0.3, 0.2, 0.7)

[node name="GrassShape" type="CollisionShape3D" parent="Zones/WildZone/FlameKitchen"]
shape = SubResource("grass_area_shape")

[node name="Grass1" type="MeshInstance3D" parent="Zones/WildZone/FlameKitchen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.6, -1.5)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_red_mat")

[node name="Grass2" type="MeshInstance3D" parent="Zones/WildZone/FlameKitchen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.7, 0)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_red_mat")

[node name="Grass3" type="MeshInstance3D" parent="Zones/WildZone/FlameKitchen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, 2)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_red_mat")

[node name="Grass4" type="MeshInstance3D" parent="Zones/WildZone/FlameKitchen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.65, -1)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_red_mat")

; Frost Pantry (-18, 0, -35) — medium, west
[node name="FrostPantry" type="Area3D" parent="Zones/WildZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, -35)
script = ExtResource("7")
encounter_table_id = "frost_pantry"
grass_color = Color(0.3, 0.4, 0.7, 0.7)

[node name="GrassShape" type="CollisionShape3D" parent="Zones/WildZone/FrostPantry"]
shape = SubResource("grass_area_shape")

[node name="Grass1" type="MeshInstance3D" parent="Zones/WildZone/FrostPantry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.6, 1)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_blue_mat")

[node name="Grass2" type="MeshInstance3D" parent="Zones/WildZone/FrostPantry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.7, -1)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_blue_mat")

[node name="Grass3" type="MeshInstance3D" parent="Zones/WildZone/FrostPantry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.5, 2)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_blue_mat")

[node name="Grass4" type="MeshInstance3D" parent="Zones/WildZone/FrostPantry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.65, -2)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_blue_mat")

; Harvest Field (18, 0, -35) — medium, east
[node name="HarvestField" type="Area3D" parent="Zones/WildZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, -35)
script = ExtResource("7")
encounter_table_id = "harvest_field"
grass_color = Color(0.6, 0.55, 0.2, 0.7)

[node name="GrassShape" type="CollisionShape3D" parent="Zones/WildZone/HarvestField"]
shape = SubResource("grass_area_shape")

[node name="Grass1" type="MeshInstance3D" parent="Zones/WildZone/HarvestField"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.6, -1)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_gold_mat")

[node name="Grass2" type="MeshInstance3D" parent="Zones/WildZone/HarvestField"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.7, 1.5)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_gold_mat")

[node name="Grass3" type="MeshInstance3D" parent="Zones/WildZone/HarvestField"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_gold_mat")

[node name="Grass4" type="MeshInstance3D" parent="Zones/WildZone/HarvestField"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.65, 2)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_gold_mat")

; Sour Springs (18, 0, -48) — hard, east
[node name="SourSprings" type="Area3D" parent="Zones/WildZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, -48)
script = ExtResource("7")
encounter_table_id = "sour_springs"
grass_color = Color(0.7, 0.8, 0.2, 0.7)

[node name="GrassShape" type="CollisionShape3D" parent="Zones/WildZone/SourSprings"]
shape = SubResource("grass_area_shape")

[node name="Grass1" type="MeshInstance3D" parent="Zones/WildZone/SourSprings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.6, -1)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_yellow_mat")

[node name="Grass2" type="MeshInstance3D" parent="Zones/WildZone/SourSprings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.7, 1)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_yellow_mat")

[node name="Grass3" type="MeshInstance3D" parent="Zones/WildZone/SourSprings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 2)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_yellow_mat")

[node name="Grass4" type="MeshInstance3D" parent="Zones/WildZone/SourSprings"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.65, -2)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_yellow_mat")

; Fusion Kitchen (-18, 0, -48) — hard, west
[node name="FusionKitchen" type="Area3D" parent="Zones/WildZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, -48)
script = ExtResource("7")
encounter_table_id = "fusion_kitchen"
grass_color = Color(0.6, 0.3, 0.6, 0.7)

[node name="GrassShape" type="CollisionShape3D" parent="Zones/WildZone/FusionKitchen"]
shape = SubResource("grass_area_shape")

[node name="Grass1" type="MeshInstance3D" parent="Zones/WildZone/FusionKitchen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.6, -2)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_purple_mat")

[node name="Grass2" type="MeshInstance3D" parent="Zones/WildZone/FusionKitchen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.7, 0)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_purple_mat")

[node name="Grass3" type="MeshInstance3D" parent="Zones/WildZone/FusionKitchen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 1)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_purple_mat")

[node name="Grass4" type="MeshInstance3D" parent="Zones/WildZone/FusionKitchen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.65, 2)
mesh = SubResource("grass_blade_mesh")
material_override = SubResource("grass_purple_mat")

; === CAULDRON (0, 0, -55) — deepest point ===
[node name="Cauldron" type="StaticBody3D" parent="Zones/WildZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, -55)

[node name="CauldronMesh" type="MeshInstance3D" parent="Zones/WildZone/Cauldron"]
mesh = SubResource("cauldron_mesh")
material_override = SubResource("cauldron_mat")

[node name="InteractArea" type="Area3D" parent="Zones/WildZone/Cauldron"]
script = ExtResource("12")
station_type = "cauldron"

[node name="InteractShape" type="CollisionShape3D" parent="Zones/WildZone/Cauldron/InteractArea"]
shape = SubResource("station_interact_shape")

[node name="StationLabel" type="Label3D" parent="Zones/WildZone/Cauldron"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
text = "Cauldron"
font_size = 48
outline_size = 8
modulate = Color(0.6, 0.3, 0.8, 1)

; === RECIPE PICKUPS ===
[node name="RecipePickups" type="Node3D" parent="Zones/WildZone"]

; Near Herb Garden
[node name="PickupHerbGarden" type="Area3D" parent="Zones/WildZone/RecipePickups"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, -15)
script = ExtResource("13")
scroll_id = "scroll_basil_sprite"
pickup_id = "pickup_herb_garden_1"

[node name="PickupShape" type="CollisionShape3D" parent="Zones/WildZone/RecipePickups/PickupHerbGarden"]
shape = SubResource("pickup_shape")

; Near Frost Pantry
[node name="PickupFrostPantry" type="Area3D" parent="Zones/WildZone/RecipePickups"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 0, -35)
script = ExtResource("13")
scroll_id = "scroll_frost_berry"
pickup_id = "pickup_frost_pantry_1"

[node name="PickupShape" type="CollisionShape3D" parent="Zones/WildZone/RecipePickups/PickupFrostPantry"]
shape = SubResource("pickup_shape")

; Near Sour Springs
[node name="PickupSourSprings" type="Area3D" parent="Zones/WildZone/RecipePickups"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, -48)
script = ExtResource("13")
scroll_id = "scroll_lemon_imp"
pickup_id = "pickup_sour_springs_1"

[node name="PickupShape" type="CollisionShape3D" parent="Zones/WildZone/RecipePickups/PickupSourSprings"]
shape = SubResource("pickup_shape")

; Near Fusion Kitchen
[node name="PickupFusionKitchen" type="Area3D" parent="Zones/WildZone/RecipePickups"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22, 0, -48)
script = ExtResource("13")
scroll_id = "scroll_pickle_toad"
pickup_id = "pickup_fusion_kitchen_1"

[node name="PickupShape" type="CollisionShape3D" parent="Zones/WildZone/RecipePickups/PickupFusionKitchen"]
shape = SubResource("pickup_shape")

; === TRAINER NPCs ===
[node name="Trainers" type="Node3D" parent="Zones"]

; Sous Chef Pepper — optional, near Herb Garden
[node name="SousChefPepper" type="Area3D" parent="Zones/Trainers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -10)
script = ExtResource("9")
trainer_id = "sous_chef_pepper"

; Farmer Green — optional, near Flame Kitchen
[node name="FarmerGreen" type="Area3D" parent="Zones/Trainers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -10)
script = ExtResource("9")
trainer_id = "farmer_green"

; Chef Umami — GATEKEEPER #1, guards mid zones
[node name="ChefUmami" type="Area3D" parent="Zones/Trainers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)
script = ExtResource("9")
trainer_id = "chef_umami"
is_gatekeeper = true

; Pastry Chef Dulce — optional, near Frost Pantry
[node name="PastryChefDulce" type="Area3D" parent="Zones/Trainers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, -28)
script = ExtResource("9")
trainer_id = "pastry_chef_dulce"

; Brinemaster Vlad — optional, near Harvest Field
[node name="BrinemasterVlad" type="Area3D" parent="Zones/Trainers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18, 0, -28)
script = ExtResource("9")
trainer_id = "brinemaster_vlad"

; Head Chef Roux — GATEKEEPER #2, guards hard zones
[node name="HeadChefRoux" type="Area3D" parent="Zones/Trainers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -40)
script = ExtResource("9")
trainer_id = "head_chef_roux"
is_gatekeeper = true

; Grand Chef Michelin — optional final boss, near Cauldron
[node name="GrandChefMichelin" type="Area3D" parent="Zones/Trainers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 0, -55)
script = ExtResource("9")
trainer_id = "grand_chef_michelin"

; === SHOP NPCs ===
[node name="Shops" type="Node3D" parent="Zones"]

; General Store — near spawn hub
[node name="GeneralStore" type="Area3D" parent="Zones/Shops"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 5)
script = ExtResource("17")
shop_id = "general_store"

; Battle Supplies — mid-game area
[node name="BattleSupplies" type="Area3D" parent="Zones/Shops"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -15)
script = ExtResource("17")
shop_id = "battle_supplies"

; Rare Goods — deep zone
[node name="RareGoods" type="Area3D" parent="Zones/Shops"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -45)
script = ExtResource("17")
shop_id = "rare_goods"

; === SOCIAL NPCs ===
[node name="SocialNPCs" type="Node3D" parent="Zones"]

; Baker Brioche — near spawn/restaurant
[node name="BakerBrioche" type="Area3D" parent="Zones/SocialNPCs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 5)
script = ExtResource("18")
npc_id = "npc_baker"

; Sage the Herbalist — Herb Garden zone
[node name="SageHerbalist" type="Area3D" parent="Zones/SocialNPCs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -12)
script = ExtResource("18")
npc_id = "npc_herbalist"

; Old Salt — Frost Pantry zone
[node name="OldSalt" type="Area3D" parent="Zones/SocialNPCs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, -33)
script = ExtResource("18")
npc_id = "npc_fisherman"

; Ember the Smith — near workbench
[node name="EmberSmith" type="Area3D" parent="Zones/SocialNPCs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, 5)
script = ExtResource("18")
npc_id = "npc_blacksmith"

; Professor Umami — hub center
[node name="ProfessorUmami" type="Area3D" parent="Zones/SocialNPCs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 2)
script = ExtResource("18")
npc_id = "npc_librarian"

; === RESTAURANT ROW (south of spawn, z=12) ===
[node name="RestaurantRow" type="Node3D" parent="Zones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 12)

[node name="SignLabel" type="Label3D" parent="Zones/RestaurantRow"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 3, -1)
text = "Restaurant Row"
font_size = 56
outline_size = 8
modulate = Color(1, 0.85, 0.4, 1)
billboard = 1

; === Restaurant Manager ===
[node name="RestaurantManager" type="Node" parent="."]
script = ExtResource("16")

; === Social Manager ===
[node name="SocialManager" type="Node" parent="."]
script = ExtResource("19")

; === Location Manager ===
[node name="LocationManager" type="Node" parent="."]
script = ExtResource("20")

; === Quest Manager ===
[node name="QuestManager" type="Node" parent="."]
script = ExtResource("21")

; === Friend Manager ===
[node name="FriendManager" type="Node" parent="."]
script = ExtResource("22")

; === World Item Manager + Container ===
[node name="WorldItemManager" type="Node" parent="."]
script = ExtResource("15")

[node name="WorldItems" type="Node3D" parent="."]

; === UI Overlays ===
[node name="UI" type="Node" parent="."]

[node name="PvPChallengeUI" parent="UI" instance=ExtResource("10")]

[node name="TrainerDialogueUI" parent="UI" instance=ExtResource("11")]
